GNOME Bugzilla – Bug 723989
Misc build fixes
Last modified: 2014-02-10 17:58:02 UTC
.
Created attachment 268614 [details] [review] build: Add missing introspection dependency on gio GIcon is defined in Gio-2.0, so add it to the Gir dependencies.
Created attachment 268615 [details] [review] doc: Fix parameter name in API docs
commit dc8a52a98801ebfe04d37a1bb1f1ce7362927872 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Feb 10 01:12:44 2014 +0100 doc: Fix parameter name in API docs https://bugzilla.gnome.org/show_bug.cgi?id=723989 src/grl-registry.c | 2 +- 1 file changed, 1 insertion(+), 1 deletion(-) commit a6046475d3972d636c21bf4a82f3f39553aaa790 Author: Bastien Nocera <hadess@hadess.net> Date: Mon Feb 10 01:12:07 2014 +0100 build: Add missing introspection dependency on gio GIcon is defined in Gio-2.0, so add it to the Gir dependencies. https://bugzilla.gnome.org/show_bug.cgi?id=723989 src/Makefile.am | 2 +- 1 file changed, 1 insertion(+), 1 deletion(-) Attachment 268614 [details] pushed as a604647 - build: Add missing introspection dependency on gio Attachment 268615 [details] pushed as dc8a52a - doc: Fix parameter name in API docs