doc: Fix parameter name in API docs

https://bugzilla.gnome.org/show_bug.cgi?id=723989